# docker-poetry

./: Dockerfile  README.md  pyproject.toml
