# vim:set ft=python :

[tool.poetry]
name = "docker-poetry"
version = "0.1.0"
description = "docker-poetry"

authors = [
    "Kazuya Gosho <ketsume0211@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/acro5piano/docker-poetry"
homepage = "https://github.com/acro5piano/docker-poetry"

[tool.poetry.dependencies]
python = "^3.6.2"

googleapis-common-protos = "1.5.5"

[tool.poetry.dev-dependencies]
